[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transplant-zstar"
version = "0.2.1"
description = "Self-supervised, multimodal representation learning framework for kidney transplant patient data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Marouane Tliba" },
]
keywords = [
    "self-supervised-learning",
    "vae",
    "vq-vae",
    "multimodal",
    "transplant",
    "clinical-machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # torch has no minimum floor here: PyTorch stopped publishing Intel-macOS
    # wheels after 2.2.2, so a floor above that would make this uninstallable
    # for any Intel Mac / Rosetta-translated Python. numpy is capped below 2.0
    # instead: numpy 1.x is ABI-compatible with every torch release from 2.0.0
    # onward, whereas numpy 2.x crashes on `import torch` for pre-2.3 torch
    # builds -- capping numpy is what actually guarantees a working install
    # across old and new torch alike, since pip can't resolve on that ABI
    # relationship itself.
    "torch>=2.0.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0,<2.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0,<1.6",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5.3"]

[project.scripts]
zstar-popf-apgf = "zstar.pipelines.popf_apgf:main"

[project.urls]
Homepage = "https://github.com/mtliba/zstar"
Documentation = "https://mtliba.github.io/zstar/"
Repository = "https://github.com/mtliba/zstar"
Issues = "https://github.com/mtliba/zstar/issues"

[tool.setuptools]
package-dir = { "zstar" = "." }
packages = [
    "zstar",
    "zstar.encoders",
    "zstar.decoders",
    "zstar.quantization",
    "zstar.fusion",
    "zstar.losses",
    "zstar.models",
    "zstar.data",
    "zstar.training",
    "zstar.evaluation",
    "zstar.pipelines",
]

[tool.setuptools.package-data]
zstar = ["config.yaml"]
